--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PNASScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PNASScraperUnitURLTest2.bib
@@ -2,7 +2,7 @@
   abstract = {Transmission electron microscopy studies have been used to argue that magnetite crystals in carbonate from Martian meteorite ALH84001 have a composition and morphology indistinguishable from that of magnetotactic bacteria. It has even been claimed from scanning electron microscopy imaging that some ALH84001 magnetite crystals are aligned in chains. Alignment of magnetosomes in chains is perhaps the most distinctive of the six crystallographic properties thought to be collectively unique to magnetofossils. Here we use three rock magnetic techniques, low-temperature cycling, the Moskowitz test, and ferromagnetic resonance, to sense the bulk composition and crystallography of millions of ALH84001 magnetite crystals. The magnetic data demonstrate that although the magnetite is unusually pure and fine-grained in a manner similar to terrestrial magnetofossils, most or all of the crystals are not arranged in chains.},
   author = {Weiss, Benjamin P. and Kim, Soon Sam and Kirschvink, Joseph L. and Kopp, Robert E. and Sankaran, Mohan and Kobayashi, Atsuko and Komeili, Arash},
   doi = {10.1073/pnas.0402292101},
-  eprint = {http://www.pnas.org/content/101/22/8281.full.pdf+html},
+  eprint = {http://www.pnas.org/content/101/22/8281.full.pdf},
   journal = {Proceedings of the National Academy of Sciences of the United States of America},
   number = 22,
   pages = {8281-8284},
