layout for sync-admin and settings page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2080,6 +2080,7 @@ synchronization.result.done                          = done
 synchronization.result.error                         = erroneous
 synchronization.result.planned                       = synchronization plan created
 synchronization.result.running                       = running (or aborted)
+synchronization.secureAPI                            = secure API URL
 synchronization.server                               = synchronization server
 synchronization.server.add                           = add new synchronization server
 synchronization.server.add.acknowledge               = You requested to create a new synchronization connection to {0}.\nPlease acknowledge the new synchronization server.
@@ -2091,7 +2092,9 @@ synchronization.server.reset.confirm                 = Do you really want to res
 synchronization.server.update                        = edit synchronization server
 synchronization.server.update.intro                  = An overview about the state of your synchronization as well as the possibility to start synchronization is given on the <a href="/sync">sync page</a>.
 synchronization.serverWins                           = server wins
+synchronization.service                              = service URI
 synchronization.serviceName                          = Name of synchronization server
+synchronization.sslDn                                = SSL-DN
 synchronization.syncPlan                             = synchronization plan
 synchronization.syncPlan.get                         = get synchronization plan
 synchronization.syncPlan.message                     = On {0}, {1} posts will be created, {2} posts will be updated, and {3} posts will be deleted.
