--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2077,6 +2077,7 @@ synchronization.result.done                          = erfolgreich
 synchronization.result.error                         = fehlerhaft
 synchronization.result.planned                       = Synchronisationsplan erstellt
 synchronization.result.running                       = l\u00E4uft noch (oder wurde abgebrochen)
+synchronization.secureAPI                            = secure API URL
 synchronization.server                               = Synchronisationsserver
 synchronization.server.add                           = Neuen Synchronisationsserver hinzuf\u00FCgen
 synchronization.server.add.acknowledge               = Sie versuchen eine neue Synchronisationsverbindung zu {0} einzurichten. Bitte best\u00E4tigen Sie den neuen Synchronisationsserver.
@@ -2088,7 +2089,9 @@ synchronization.server.reset.confirm                 = Wollen Sie den Synchronis
 synchronization.server.update                        = Synchronisationsserver bearbeiten
 synchronization.server.update.intro                  = Einen \u00DCberblick \u00FCber den Status Ihrer Synchronisation sowie die M\u00F6glichkeit, die Synchronisation zu starten, gibt Ihnen die <a href="/sync">Synchronisationsseite</a>.
 synchronization.serverWins                           = Server gewinnt
+synchronization.service                              = Service URI
 synchronization.serviceName                          = Name des Synchronisationsservers
+synchronization.sslDn                                = SSL-DN
 synchronization.syncPlan                             = Synchronisationsplan
 synchronization.syncPlan.get                         = Synchronisationsplan anfordern
 synchronization.syncPlan.message                     = Auf {0} werden {1} Eintr\u00E4ge neu erstellt, {2} Eintr\u00E4ge aktualisiert und {3} Eintr\u00E4ge gel\u00F6scht.
@@ -2096,7 +2099,7 @@ synchronization.syncPlan.message.other               = {0} Eintr\u00E4ge bleiben
 synchronization.syncThis                             = synchronisieren
 synchronization.synchronize                          = jetzt synchronisieren
 
-system.about                             = Mit {0} lassen sich einfach und komfortabel Lesezeichen und Publikationen online verwalten und teilen. \n\nWarum nicht einfach mitmachen und interessante Webseiten und Publikationen <a href="/help_de/Literaturverweise%20und%20Lesezeichen%20hinzufügen%20und%20auswerten">sammeln, verwalten</a> und <a href="/help_de/Kommentar%2C%20Rezension%2C%20Bewertung%20-%20Gemeinsam%20mit%20anderen%20diskutieren">diskutieren</a>?
+system.about                             = Mit {0} lassen sich einfach und komfortabel Lesezeichen und Publikationen online verwalten und teilen. \n\nWarum nicht einfach mitmachen und interessante Webseiten und Publikationen <a href="/help_de/Literaturverweise%20und%20Lesezeichen%20hinzuf\u00C3\u00BCgen%20und%20auswerten">sammeln, verwalten</a> und <a href="/help_de/Kommentar%2C%20Rezension%2C%20Bewertung%20-%20Gemeinsam%20mit%20anderen%20diskutieren">diskutieren</a>?
 system.about.bs                          = <h2>Der einfache Weg zum Verwalten wissenschaftlicher Publikationen und Lesezeichen</h2>\n\n<p>{0} hilft Ihnen beim Verwalten Ihrer Publikationen und Lesezeichen, bei der Zusammenarbeit mit Kollegen und beim Finden neuer interessanter Sachen f\u00FCr Ihre Forschung.</p>
 system.about.bs.learnmore                = erfahren Sie mehr
 system.about.bs.register                 = kostenlos registrieren
