--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1818,7 +1818,7 @@ settings.aboutMe                                            = \u00DCber mich
 settings.add                                                = hinzuf\u00FCgen
 settings.addFriendsNow                                      = Sie haben derzeit keine Freunde hinzugef\u00FCgt. Jetzt Freunde {0}?
 settings.addagroup                                          = eine Gruppe hinzuf\u00FCgen
-settings.addgroupdescription                                = Um eine Gruppe zum System hinzuzuf\u00FCgen, erstellen Sie ein Benutzerkonto mit dem gew\u00FCnschten Gruppennamen und schreiben Sie eine E-Mail an {0}
+settings.addgroupdescription                                = Um eine Gruppe zum System hinzuzuf\u00FCgen, nutzen Sie bitte das Anfrageformular unter {0}
 settings.advanced                                           = Erweitert
 settings.all                                                = Alle
 settings.alphabet                                           = Alphabet
