+missing german messages

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1464,6 +1464,13 @@ post.meta.unpick                                        = Vergessen
 post.meta.unpick.all                                    = alle entfernen
 post.meta.unpick.title                                  = Alle Publikationen dieser Liste aus der Ablage entfernen
 post.meta.xml                                           = XML
+post.person.role                                        = Rolle der Person
+post.person.role.advisor                                = Betreuer
+post.person.role.doctor_vater                           = Doktorvater
+post.person.role.first_reviewer                         = Erstgutachter
+post.person.role.help                                   = Bitte  w\u00E4hlen Sie die Rolle der beteiligten Person aus
+post.person.role.other                                  = andere beteiligte Person
+post.person.role.reviewer                               = weiterer Gutachter
 post.resource.about                                     = \u00DCber dieses Feld
 post.resource.aboutrelevantfor                          = F\u00FCgen Sie Tags hinzu, die beschreiben, inwiefern Ihr Eintrag relevant f\u00FCr einige Gruppen ist.
 post.resource.abstract                                  = Zusammenfassung
