->unified person role name message keys

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1468,11 +1468,12 @@ post.meta.unpick.all                                    = unpick all
 post.meta.unpick.title                                  = remove all publication posts on this page from your clipboard
 post.meta.xml                                           = XML
 post.person.role                                        = publisher's role
+post.person.role.advisor                                = advisor
+post.person.role.doctor_vater                           = main doctoral thesis supervisor
+post.person.role.first_reviewer                         = first reviewer
 post.person.role.help                                   = please select the role of this person in this publication
-post.person.thesis_advisor                              = thesis's advisor
-post.person.thesis_doctor_vater                         = thesis's doctor vater
-post.person.thesis_first_reviewer                       = thesis's first reviewer
-post.person.thesis_reviewer                             = thesis's reviewer
+post.person.role.other                                  = other related person
+post.person.role.reviewer                               = other reviewer
 post.resource.about                                     = about
 post.resource.aboutrelevantfor                          = add some tags which describe the relevance of your post for some groups
 post.resource.abstract                                  = abstract
