--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -28,6 +28,7 @@ admin.actions.general              = Allgemeine Aktionen
 admin.actions.group                = Gruppe hinzuf\u00FCgen
 admin.actions.group.accept         = akzeptieren
 admin.actions.group.decline        = ablehnen
+admin.actions.group.decline.reason = Gruppenanfrage von {0} mit folgender Begr\u00FCndung l\u00F6schen
 admin.actions.oauth                = OAuth Consumer bearbeiten
 admin.actions.scraper              = Scraper Infos
 admin.actions.user                 = Benutzer Infos
@@ -1012,6 +1013,9 @@ mail.activation.body                 = \nVielen Dank, dass Sie sich f\u00FCr {1}
 mail.activation.subject              = Die Aktivierung Ihres {1}-Accounts war erfolgreich!
 mail.group.activation.body           = Hallo {0}!\n\nIhre Gruppe {1} wurde erstellt. Sie k\u00F6nnen die Gruppenseite unter {2} besuchen und gruppenspezifische Settings unter {3} editieren.\n\nWir w\u00FCnschen Ihnen weiterhin viel Spa\u00DF bei der Nutzung von {4}!\n\nAntworten an diese E-Mail-Adresse werden gel\u00F6scht, bitte senden Sie Fragen an {5}.
 mail.group.activation.subject        = Ihre Gruppe {1} wurde erstellt!
+mail.group.decline                   = 
+mail.group.decline.body              = Hallo {0}!\n\nIhre Antrag auf Erstellung der Gruppe {1} wurde abgelehnt.\n\n{2}\n\nAntworten an diese E-Mail-Adresse werden gel\u00F6scht, bitte senden Sie Fragen an {4}.
+mail.group.decline.subject           = Ihre Gruppe {1} wurde erstellt!
 mail.groupInvite.body                = \nHallo {0}!\n\nBenutzer {1} hat Sie eingeladen, der Gruppe {2} beizutreten.\n\nBesuchen Sie {8}\n\nUnsere Hilfe- bzw. FAQ-Seite finden Sie hier:\n{3}help\n{3}faq\n\nNeuigkeiten bez\u00FCglich {3} finden Sie in unserem Blog:\nhttp://blog.bibsonomy.org\n\nAntworten auf diese E-Mail werden gel\u00F6scht, bei Fragen schreiben Sie bitte an {7}\n
 mail.groupInvite.subject             = Beitrittseinladung zur Gruppe {2}
 mail.joinGroupRequest.body           = \nHallo {0}!\n\nBenutzer {1} bittet um Erlaubnis, Ihrer Gruppe beitreten zu d\u00FCrfen.\n\nBegr\u00FCndung: {2}\n\nBesuchen Sie {8}\n\nUnsere Hilfe- bzw. FAQ-Seite finden Sie hier:\n{3}help\n{3}faq\n\nNeuigkeiten bez\u00FCglich {3} finden Sie in unserem Blog:\nhttp://blog.bibsonomy.org\n\nAntworten auf diese E-Mail werden gel\u00F6scht, bei Fragen schreiben Sie bitte an {7}\n
