--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -26,6 +26,7 @@ admin.actions.general              = General actions
 admin.actions.group                = Add a group
 admin.actions.group.accept         = accept
 admin.actions.group.decline        = decline
+admin.actions.group.decline.reason = Decline group request from {0} with the following reason
 admin.actions.oauth                = Manage OAuth Consumers
 admin.actions.scraper              = Scraper info 
 admin.actions.user                 = User info
@@ -1004,6 +1005,9 @@ mail.activation.body                 = \nWelcome to {1}! Your account activation
 mail.activation.subject              = Your {1} activation was successful!
 mail.group.activation.body           = Hello {0}!\n\nYour group {1} has been created. You can visit the groups' page under {2} and edit its settings under {3}.\n\nHave fun using {4}!\n\nReplies to this e-mail address are deleted, please send questions to {5}.
 mail.group.activation.subject        = Your group {1} has been created!
+mail.group.decline                   = 
+mail.group.decline.body              = Hello {0}!\n\nYour request for creating the group {1} has been declined.\n\n{2}\n\nReplies to this e-mail address are deleted, please send questions to {4}.
+mail.group.decline.subject           = Your group {1} has been created!
 mail.groupInvite.body                = \nHello {0}!\n\nUser {1} has invited you to join {2}.\n\nVisit {8}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.groupInvite.subject             = Group invitation to {2}
 mail.joinGroupRequest.body           = \nHello {0}!\n\nUser {1} has sent a request to join your group.\n\nReason: {2}\n\nVisit {8}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
