add end of life remark for Bib2

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2109,6 +2109,7 @@ system.about.bs.register                 = register for free
 system.bib3.about                        = We have created a completely new user interface that\u2019s as powerful as it is intuitive to use. The new {0} front-end gives you a better accessibility, usability, and makes the system even more useful for mobile work.
 system.bib3.switch                       = Switch to {0}
 system.bib3.switch.now                   = Switch to {0} now!
+system.bib3.switch.endoflife		 = Please note that the old layout you are using will be disabled on July 1st 2015. Your account will then be migrated to the new layout.
 system.contact                           = Contact:
 system.desc                              = The blue social bookmark and publication sharing system.
 system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
