--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/GoogleBooksScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/GoogleBooksScraperUnitURLTest1.bib
@@ -1,7 +1,7 @@
 @book{london1911white,
   title={White Fang},
   author={London, J.},
-  url={http://books.google.de/books?id=OhstAAAAYAAJ},
+  url={https://books.google.de/books?id=OhstAAAAYAAJ},
   year={1911},
   publisher={Macmillan and Company}
 }
