ambiguity in expected values

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest5.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest5.bib
@@ -1,5 +1,5 @@
 @article{PhysRevE.64.016131,
-  title = {Scientific collaboration networks.$\hskip0.3em${}$\hskip0.3em${}I. Network construction and fundamental results},
+  title = {Scientific collaboration networks.  I. Network construction and fundamental results},
   author = {Newman, M. E. J.},
   journal = {Phys. Rev. E},
   volume = {64},
