change the url to doi-url

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CellScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CellScraperUnitURLTest2.bib
@@ -9,6 +9,6 @@ number = {6},
 pages = {2064--2081},
 publisher = {Elsevier},
 title = {The Tethered Infinitesimal Tori and Spheres Algorithm: A Versatile Calculator for Axisymmetric Problems in Equilibrium Membrane Mechanics},
-url = {http://www.cell.com/biophysj/abstract/S0006-3495(09)00310-5},
+url = {http://dx.doi.org/10.1016/j.bpj.2008.10.074},
 volume = {96}
 }
