--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MDPIScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MDPIScraperUnitURLTest.bib
@@ -6,7 +6,7 @@ JOURNAL = {Remote Sensing},
 VOLUME = {5},
 YEAR = {2013},
 NUMBER = {10},
-PAGES = {5122--5142},
+PAGES = {5122},
 URL = {http://www.mdpi.com/2072-4292/5/10/5122},
 ISSN = {2072-4292},
 DOI = {10.3390/rs5105122}
