Author name is added. An alert to the edit publication page is added.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -459,6 +459,7 @@ disambiguation.personsPanelHeader                   = Persons with the name
 disambiguation.pleaseChooseMsg                      = Please choose a person according to this entry with the name "{0}":
 disambiguation.postPanelHeader                      = Related Post
 disambiguation.searchPersonButton                   = Search other name
+person.pub.link										= This publication is linked to its author
 
 discussion.bookmarkReferences = Bookmarks
 discussion.byGroup            = show posts recently discussed by members of {0}
