cleaned up scrapers, tests, and test data - SpringerLink test data: please repair abstract scraping - some scrapers: please look at my cleanups and learn from them

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest2.bib
@@ -11,4 +11,5 @@ publisher={Springer Berlin Heidelberg},
 author={Grčar, Miha and Fortuna, Blaž and Mladenič, Dunja and Grobelnik, Marko},
 pages={251-260},
 language={English}
+,abstract = {We present experimental results of confronting the k-Nearest Neighbor (kNN) algorithm with }
 }
