--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpringerLinkScraperUnitURLTest3.bib
@@ -12,4 +12,5 @@ publisher={Springer Berlin Heidelberg},
 author={Zhou, Shuigeng and Zhou, Aoying and Cao, Jing and Wen, Jin and Fan, Ye and Hu, Yunfa},
 pages={169-172},
 language={English}
+,abstract = {In this paper, we combine sampling technique with DBSCAN algorithm to cluster large spatial databases, two sampling-based DBSCAN (SDBSCAN) algorithms are developed. One algorithm introduces sampling technique inside DBSCAN; and the other uses sampling procedure outside DBSCAN. Experimental results demonstrate that our algorithms are effective and efficient in clustering large-scale spatial databases.}
 }
