fixes inconsistencies in message properties

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -77,8 +77,6 @@ basket.infoActions      = Beispielsweise k\u00F6nnen Sie schnell und einfach
 basket.removeAll        = Ablage leeren
 basket.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
 
-batchedit = 
-
 batchedit.AllpostTagsHeader        = Diese Tags werden zu allen selektierten<br/> Post hinzugef\u00FCgt
 batchedit.EditAllTag               = Tags zu allen ausgew\u00E4hlten Posts hinzuf\u00FCgen
 batchedit.EditEachTag              = Die Tags aller ausgew\u00E4hlten Eintr\u00E4ge separat bearbeiten
@@ -1838,15 +1836,18 @@ settings.group                                              = Gruppe
 settings.group.accInvite.button                             = akzeptieren
 settings.group.accInvite.button.title                       = Gruppeneinladung annehmen
 settings.group.accUser                                      = Beitrittsgesuch des Benutzers {0} akzeptieren
+settings.group.accUser.button.title                         = Nutzer aus Gruppe entfernen
 settings.group.addUser.button                               = Benutzer hinzuf\u00FCgen
+settings.group.addUser.button.title                         = Benutzer hinzuf\u00FCgen
 settings.group.addUser.help                                 = Der Name des Benutzers, der zur Gruppe hinzugef\u00FCgt werden soll
 settings.group.delUser                                      = Benutzer ausschlie\u00DFen
 settings.group.delUser.button                               = Ausschlie\u00DFen
-settings.group.delUser.button.title                         = Diesen Benutzer aus der Gruppe ausschlie\u00DFen
+settings.group.delUser.button.title                         = Dieser Nutzer ist Mitglied der Gruppe
 settings.group.delUser.help                                 = Der Name des Benutzers, der aus der Gruppe ausgeschlossen werden soll
 settings.group.delUser.noUser                               = Die Gruppe hat derzeit noch keine Mitglieder.
 settings.group.deny                                         = Mitgliedschaftsantrag des Benutzers {0} ablehnen
 settings.group.deny.button                                  = Antrag ablehnen
+settings.group.deny.button.title                            = Antrag ablehnen
 settings.group.denyReason                                   = Grund
 settings.group.denyReason.help                              = Der Grund, weshalb der Benutzer nicht der Gruppe beitreten darf
 settings.group.description                                  = Beschreibung
@@ -2032,6 +2033,7 @@ subtags = Subtags
 
 success = Erfolg
 
+success.group.activation      = Gruppe erfolgreich aktiviert
 success.groupRequest.sent     = Ihr Wunsch, die Gruppe {0} zu erstellen wurde an die Systemadministratoren weitergeleitet.
 success.joinGroupRequest.sent = Ihr Wunsch, der Gruppe {0} beizutreten wurde an die Moderatoren dieser Gruppe weitergeleitet.
 
@@ -2175,7 +2177,6 @@ time.about_a_second  = einer Sekunde
 time.about_x_seconds = {0} Sekunden
 time.an_hour         = einer Stunde
 time.and             = und
-time.postfix         = 
 time.prefix          = vor 
 time.x_days          = {0} Tagen
 time.x_hours         = {0} Stunden
