--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -77,8 +77,6 @@ basket.infoActions      = For example, you can
 basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
-batchedit = 
-
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
 batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
@@ -967,7 +965,6 @@ login.lostPassword            = lost password
 login.lostPassword_1          = I've lost my password.
 login.lostPassword_2          = Please send me a new one.
 login.method                  = Login method
-login.method.httpbasic        = 
 login.method.internal         = Local
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -1841,15 +1838,18 @@ settings.group                                              = group
 settings.group.accInvite.button                             = accept
 settings.group.accInvite.button.title                       = accept the group invite
 settings.group.accUser                                      = accept join request of user {0}
+settings.group.accUser.button.title                         = Remove user from group
 settings.group.addUser.button                               = add user
+settings.group.addUser.button.title                         = add user
 settings.group.addUser.help                                 = the user's name that is to be added
 settings.group.delUser                                      = remove user
 settings.group.delUser.button                               = remove
-settings.group.delUser.button.title                         = remove this user from the group
+settings.group.delUser.button.title                         = Accept group membership for this user
 settings.group.delUser.help                                 = enter the name of the user you wish to remove from the group
 settings.group.delUser.noUser                               = The group currently has no members.
 settings.group.deny                                         = deny join request of user {0}
 settings.group.deny.button                                  = deny
+settings.group.deny.button.title                            = deny
 settings.group.denyReason                                   = reason
 settings.group.denyReason.help                              = the reason why the user is not allowed to join
 settings.group.description                                  = description
@@ -2035,6 +2035,7 @@ subtags = subtags
 
 success = success
 
+success.group.activation      = Your group has been activated
 success.groupRequest.sent     = Your request to create the group {0} has been forwarded to the system's administrators.
 success.joinGroupRequest.sent = Your request to join the group {0} has been forwarded to the group's moderators.
 
@@ -2179,7 +2180,6 @@ time.about_x_seconds = about {0} seconds
 time.an_hour         = an hour
 time.and             = and
 time.postfix         = \ ago
-time.prefix          = 
 time.x_days          = {0} days
 time.x_hours         = {0} hours
 time.x_minutes       = {0} minutes
