cleanuped and fixed report spammer implementation

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2228,8 +2228,8 @@ user.place                            = place
 user.profession                       = profession
 user.realname                         = real name
 user.realname.help                    = Insert your real name.
-user.report							  = report user as spammer
-user.reported						  = reported
+user.report                           = report this user as spammer
+user.reported                         = already reported as spammer
 user.settings.birthday                = birthday
 user.settings.email                   = email
 user.settings.homepage                = homepage
