--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -2254,3 +2254,4 @@ wordpress.plugin = \u041F\u043B\u0430\u0433\u0438\u043D \u0434\u043B\u044F
 yes = \u0434\u0430
 
 younger = \u043D\u043E\u0432\u0435\u0435
+admin.oauth.consumer.delete=delete
