Adapted layout for WIZKIDZ (as requested): * person-sites updated

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1292,7 +1292,7 @@ person.new.subHeader                              = for post
 person.show.B1st                                  = First reviewer
 person.show.B1stTooltip                           = First reviewer
 person.show.Bdtv                                  = Doctor-Vater
-person.show.BdtvTooltip                           = Doktor-Vater
+person.show.BdtvTooltip                           = Doctoral advisor
 person.show.Maut                                  = Author
 person.show.MautTooltip                           = Author
 person.show.Medt                                  = Editor
