--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1286,20 +1286,20 @@ person.new.newPersonButton                        = Neue Person
 person.new.personPanelHeader                      = \u00DCber diese Person
 person.new.postPanelHeader                        = Ausgew\u00E4hlter Post
 person.new.subHeader                              = f\u00FCr Publikation
-person.show.B1st                                  = Erstgutachter
-person.show.B1stTooltip                           = Erster Gutachter
-person.show.Bdtv                                  = Doktorvater
-person.show.BdtvTooltip                           = Doktorvater
-person.show.Maut                                  = Autor
-person.show.MautTooltip                           = Autor
-person.show.Medt                                  = Herausgeber
-person.show.MedtTooltip                           = Herausgeber
+person.show.B1st                                  = Erstgutachter_in
+person.show.B1stTooltip                           = Erste_r Gutachter_in der Dissertation; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
+person.show.Bdtv                                  = Doktorvater / Doktormutter
+person.show.BdtvTooltip                           = Person, die gegen\u00FCber der Doktorand_in / dem Doktoranden sowie gegen\u00FCber der Universit\u00E4t f\u00FCr das Promotionsverfahren verantwortlich war
+person.show.Maut                                  = Autor_in
+person.show.MautTooltip                           = Person, die die Arbeit geschrieben hat
+person.show.Medt                                  = Herausgeber_in
+person.show.MedtTooltip                           = Herausgeber_in
 person.show.Moth                                  = Andere
-person.show.MothTooltip                           = Andere
-person.show.Mrev                                  = Gutachter
-person.show.MrevTooltip                           = Gutachter
-person.show.Mths                                  = Betreuer
-person.show.MthsTooltip                           = Betreuer
+person.show.MothTooltip                           = Personen, die f\u00FCr das Promotionsverfahren von zentraler Bedeutung waren, aber keine der oben genannten Funktionen hatten (z.B. Mentor_innen)
+person.show.Mrev                                  = Gutachter_in
+person.show.MrevTooltip                           = Weitere Gutachter_innen der Dissertation
+person.show.Mths                                  = Betreuer_in
+person.show.MthsTooltip                           = Person, die den Doktoranden / die Doktorandin haupts\u00E4chlich betreut hat; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
 person.show.academicDegree                        = Akademischer Grad
 person.show.addAlternateNameButton                = Alternativen Namen hinzuf\u00FCgen
 person.show.addNameButton                         = Name hinzuf\u00FCgen
