--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -77,6 +77,8 @@ basket.infoActions      = For example, you can
 basket.removeAll        = clear clipboard
 basket.removeAllVerbose = remove all publications from the clipboard
 
+batchedit = 
+
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
 batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
@@ -97,6 +99,7 @@ batchedit.disregardedPosts.alert   = The inactive posts are those that are not i
 batchedit.disregardedPosts.info    = This post is not your own and therefore you can not edit it.
 batchedit.eachTagOk                = Edit tag(s)
 batchedit.editHint                 = Info: To enable edit options, select an action and at least one post.
+batchedit.hint                     = 
 batchedit.hint.notSavedEdit        = The following (non-erroneous) post(s) are not saved yet. They will be saved after you finished editing them.
 batchedit.hint.savedEdit           = The following (non-erroneous) post(s) are saved. You can now edit them.
 batchedit.info1                    = Here you can edit your posts. Edit options include
@@ -243,6 +246,7 @@ bookmarklet.legacyNotice.further2 = You can find them on the <a href="/buttons">
 bookmarklet.sidebarNotice         = Posting with only one click: Install the useful {0} browser add-on. Its buttons will simplify saving publications and bookmarks and provide a quick link to your my{0} page.
 bookmarklet.titleChrome           = use the {0} browser add-on for Chrome
 bookmarklet.titleFirefox          = Use the {0} browser add-on for Firefox
+bookmarklet.titleSafari           = 
 
 bookmarks = bookmarks
 
@@ -965,6 +969,7 @@ login.lostPassword            = lost password
 login.lostPassword_1          = I've lost my password.
 login.lostPassword_2          = Please send me a new one.
 login.method                  = Login method
+login.method.httpbasic        = 
 login.method.internal         = Local
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -2180,6 +2185,7 @@ time.about_x_seconds = about {0} seconds
 time.an_hour         = an hour
 time.and             = and
 time.postfix         = \ ago
+time.prefix          = 
 time.x_days          = {0} days
 time.x_hours         = {0} hours
 time.x_minutes       = {0} minutes
