--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -77,6 +77,8 @@ basket.infoActions      = Beispielsweise k\u00F6nnen Sie schnell und einfach
 basket.removeAll        = Ablage leeren
 basket.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
 
+batchedit = 
+
 batchedit.AllpostTagsHeader        = Diese Tags werden zu allen selektierten<br/> Post hinzugef\u00FCgt
 batchedit.EditAllTag               = Tags zu allen ausgew\u00E4hlten Posts hinzuf\u00FCgen
 batchedit.EditEachTag              = Die Tags aller ausgew\u00E4hlten Eintr\u00E4ge separat bearbeiten
@@ -96,8 +98,9 @@ batchedit.disregardedPosts.alert   = Die inaktiven Eintr\u00E4ge sind nicht aus 
 batchedit.disregardedPosts.info    = Da die folgenden Eintr\u00E4ge nicht Ihnen geh\u00F6ren, k\u00F6nnen Sie diese nicht bearbeiten.
 batchedit.eachTagOk                = Tag(s) bearbeiten
 batchedit.editHint                 = Bitte w\u00E4hlen Sie mindestens einen Eintrag aus, bevor Sie eine Option zur Bearbeitung angeben.
+batchedit.hint                     = 
 batchedit.hint.notSavedEdit        = Die folgenden (fehlerfreien) Eintr\u00E4ge werden erst gespeichert, wenn Sie die Bearbeitung abgeschlossen haben.
-batchedit.hint.savedEdit           = Die folgenden (fehlerfreien) Eintr\u00E4ge sind gespeichert und k\u00F6nnen nun bearbeitet werden.
+batchedit.hint.savedEdit           = Die folgenden (fehlerfreien) Eintr\u00E4ge sind gespeichert und k\u00F6nnen nun bearbeitet werden. 
 batchedit.info1                    = Bearbeiten Sie Ihre Eintr\u00E4ge. Sie k\u00F6nnen:
 batchedit.info2                    = Um Eintr\u00E4ge zu bearbeiten, w\u00E4hlen Sie diese zun\u00E4chst aus und geben dann die gew\u00FCnschte Aktion an.
 batchedit.noPost.message           = Es gibt keine Eintr\u00E4ge die bearbeitet werden k\u00F6nnten.
@@ -242,6 +245,7 @@ bookmarklet.legacyNotice.further2 = Diese finden Sie auf der <a href="/buttons">
 bookmarklet.sidebarNotice         = Eintragen per Knopfdruck: Nutzen Sie das praktische Browser-Add-on f\u00FCr {0}. Dieses f\u00FCgt der Navigationsleiste Ihres Browsers Schaltfl\u00E4chen zum schnellen Speichern von Lesezeichen und Publikationen und einen Link zu Ihrer mein{0}-Seite hinzu.
 bookmarklet.titleChrome           = Nutzen Sie das {0}-Browser-Add-on f\u00FCr Chrome
 bookmarklet.titleFirefox          = Nutzen Sie nun das {0}-Browser-Add-on f\u00FCr Firefox
+bookmarklet.titleSafari           = 
 
 bookmarks = Lesezeichen
 
@@ -963,7 +967,7 @@ login.lostPassword            = Passwort vergessen
 login.lostPassword_1          = Ich habe mein Passwort vergessen.
 login.lostPassword_2          = Bitte senden Sie mir ein neues Passwort.
 login.method                  = Anmeldemethode
-login.method.httpbasic        = \ 
+login.method.httpbasic        = 
 login.method.internal         = Lokal
 login.method.ldap             = LDAP
 login.method.openid           = OpenID
@@ -2177,6 +2181,7 @@ time.about_a_second  = einer Sekunde
 time.about_x_seconds = {0} Sekunden
 time.an_hour         = einer Stunde
 time.and             = und
+time.postfix         = 
 time.prefix          = vor 
 time.x_days          = {0} Tagen
 time.x_hours         = {0} Stunden
