change the line delimereters and change the structure of the bibtex file

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/UBKAScraperUnitURLTest2.bib
@@ -1,10 +1,10 @@
 @book{SWB-349648727,
 	address={Amsterdam},
 	author={Han, Jiawei and Kamber, Micheline and Pei, Jian},
-	bestand={Universitätsbibliothek Freiburg  [Signatur: NA 2011/239];Hochschule für Technik und Wirtschaft des Saarlandes,  [Signatur: 7.8.9. Han [2]];Universität des Saarlandes, Wirtschaftswiss. Seminarbibliothek,  [Signatur: BF-1-586:3 / Controlling];Hochschule für Technik und Wirtschaft des Saarlandes  [Signatur: Sonderstandort Labor Kommunikationstechnik];Universitätsbibliothek Leipzig ;Universität Heidelberg, Bibliothek der Fakultät für Mathematik  [Signatur: Han];KIT, Campus Süd, Wirtschaftswissenschaftliche ;Karlsruher Institut für Technologie (KIT) - KIT-Bibliothek  [Signatur: 2001 A 2208(3)];Hochschulbibliothek Reutlingen  [Signatur: I 3-400-316/3];Hochschulbibliothek Heilbronn, Standort Künzelsau  [Signatur: 621.846 HAN];Hochschule für Technik Stuttgart  [Signatur: ID 016];Hochschule Offenburg  [Signatur: ST 530 008 2012];Max-Planck-Institut für Informatik ;},
-	edition={3rd ed.},
+	bestand={Universitätsbibliothek Freiburg  [Signatur: NA 2011/239];Hochschule für Technik und Wirtschaft des Saarlandes,  [Signatur: 7.8.9. Han [2]];Universität des Saarlandes, Wirtschaftswiss. Seminarbibliothek,  [Signatur: BF-1-586:3 / Controlling];Hochschule für Technik und Wirtschaft des Saarlandes  [Signatur: Sonderstandort Labor Kommunikationstechnik];Universitätsbibliothek Leipzig ;Universität Heidelberg, Bibliothek der Fakultät für Mathematik  [Signatur: Han];KIT, Campus Süd, Wirtschaftswissenschaftliche ;Karlsruher Institut für Technologie (KIT) - KIT-Bibliothek  [Signatur: 2001 A 2208(3)];Universitätsbibliothek Stuttgart ;Hochschulbibliothek Reutlingen  [Signatur: I 3-400-316/3];Hochschulbibliothek Heilbronn, Standort Künzelsau  [Signatur: 621.846 HAN];Hochschule für Technik Stuttgart  [Signatur: ID 016];Hochschule Offenburg  [Signatur: ST 530 008 2012];Max-Planck-Institut für Informatik ;},
+	edition={3. ed.},
 	isbn={978-0-12-381479-1; 0-12-381479-0},
-	keywords={ ; Data mining ; Data Mining},
+	keywords={ ; Data mining ; Data Mining ; Digital Humanities},
 	publisher={Elsevier, Morgan Kaufmann},
 	series={The Morgan Kaufmann series in data mangement systems},
 	size={XXXV, 703 S. : Ill., graph. Darst.},
