Ambiguity in the expected values

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AnnualreviewsScraperUnitURLTest1.bib
@@ -5,7 +5,7 @@
 
 @article{doi:10.1146/annurev.bioeng.6.040803.140250,
 author = {Cowin, Stephen C.},
-title = {TISSUE GROWTH AND REMODELING},
+title = {Tissue Growth and Remodeling},
 journal = {Annual Review of Biomedical Engineering},
 volume = {6},
 number = {1},
