--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpiresScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/SpiresScraperUnitURLTest.bib
@@ -1,11 +1,12 @@
-@article{Groll:2007sn,
+@phdthesis{Groll:2007sn,
       author         = "Groll, Marius",
       title          = "{Construction and commissioning of a hadronic test-beam
                         calorimeter to validate the particle-flow concept at the
                         ILC}",
-      doi            = "10.3204/DESY-THESIS-2007-018",
+      school         = "Hamburg U.",
       year           = "2007",
+      url            = "http://www-library.desy.de/cgi-bin/showprep.pl?thesis07-018",
+      doi            = "10.3204/DESY-THESIS-2007-018",
       reportNumber   = "DESY-THESIS-2007-018",
-      SLACcitation   = "%%CITATION = DESY-THESIS-2007-018 ETC.;%%"
-,url = {http://inspirehep.net/search?p=find+r+desy-thesis-2007-018}
+      SLACcitation   = "%%CITATION = DESY-THESIS-2007-018;%%"
 }
