--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2094,7 +2094,7 @@ synchronization.serviceName                          = Name des Synchronisations
 synchronization.sslDn                                = SSL-DN
 synchronization.syncPlan                             = Synchronisationsplan
 synchronization.syncPlan.get                         = Synchronisationsplan anfordern
-synchronization.syncPlan.message                     = Auf {0} werden {1} Eintr\u00E4ge neu erstellt, {2} Eintr\u00E4ge aktualisiert und {3} Eintr\u00E4ge gel\u00F6scht.
+synchronization.syncPlan.message                     = Auf {0} werden {1} Eintr\u00E4ge neu *erstellt*, {2} Eintr\u00E4ge *aktualisiert* und {3} Eintr\u00E4ge *gel\u00F6scht*.
 synchronization.syncPlan.message.other               = {0} Eintr\u00E4ge bleiben unver\u00E4ndert.
 synchronization.syncThis                             = synchronisieren
 synchronization.synchronize                          = jetzt synchronisieren
@@ -2105,8 +2105,8 @@ system.about.bs.learnmore                = erfahren Sie mehr
 system.about.bs.register                 = kostenlos registrieren
 system.bib3.about                        = Wir haben eine komplett neue Benutzerschnittstelle geschaffen, die genauso m\u00E4chtig wie intuitiv zu bedienen ist. Das neue Frontend macht {0} zug\u00E4nglicher, erh\u00F6ht die Bedienbarkeit und macht es fit f\u00FCr den mobilen Einsatz.
 system.bib3.switch                       = Wechseln Sie zu {0}
+system.bib3.switch.endoflife             = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.bib3.switch.now                   = Wechseln Sie jetzt zu {0}!
-system.bib3.switch.endoflife		 = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.contact                           = Kontakt:
 system.desc                              = Lesezeichen und Publikationen teilen - in blau!
 system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie (auf Englisch) in unserem Blog unter <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a>  und <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
